LIN-2483/LIN-2495 :: Use Java version 11
Change-Id: I1619e1c96207ca9d86b5fb1a0dbff84b7a725df0