@@ -176,8 +176,8 @@ public @interface UISubsetChooser {
 
         private ItemCaptionProvider<?> getItemCaptionProvider(UISubsetChooser annotation) {
             try {
-                return annotation.itemCaptionProvider().newInstance();
-            } catch (InstantiationException | IllegalAccessException e) {
+                return annotation.itemCaptionProvider().getDeclaredConstructor().newInstance();
+            } catch (ReflectiveOperationException | IllegalArgumentException | SecurityException e) {
                 throw new LinkkiBindingException(
                         "Cannot instantiate item caption provider " + annotation.itemCaptionProvider().getName()
                                 + " using default constructor.",
